Верстаю макет ДЗ 5, делаю его перестараиваемым

--- a/04_DZ/index.html
+++ b/04_DZ/index.html
@@ -196,10 +196,116 @@
                             </div>
                         </div>
                     </div>
+                    <div class="what_we_do_right_element">
+                        <div class="what_we_do_right_element-img">
+                            <img src="./img/what_we_do_mail.png" alt="global">
+                        </div>
+                        <div class="what_we_do_right_element_content">
+                            <div class="what_we_do_right_element_content-head">
+                                <h4>Email Marketing</h4>
+                            </div>
+                            <div class="what_we_do_right_element_content-text">
+                                <p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="what_we_do_right_element">
+                        <div class="what_we_do_right_element-img">
+                            <img src="./img/what_we_do_cake.png" alt="global">
+                        </div>
+                        <div class="what_we_do_right_element_content">
+                            <div class="what_we_do_right_element_content-head">
+                                <h4>SEO Optimization</h4>
+                            </div>
+                            <div class="what_we_do_right_element_content-text">
+                                <p>Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <!-- what we do end -->
+        <!-- funfact start -->
+        <div class="funfact center">
+            <div class="funfact_contaner">
+                <div class="funfact_number">
+                    <div class="funfact_number-number">
+                        <p>95</p>
+                    </div>
+                    <div class="funfact_number-text">
+                        <p>Happy Clients</p>
+                    </div>
+                </div>
+                <div class="funfact_point point_1">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
+                        <circle cx="7.5" cy="7.5" r="7.5" fill="#F3602D"/>
+                    </svg>
+                </div>
+                <div class="funfact_number">
+                    <div class="funfact_number-number">
+                        <p>115</p>
+                    </div>
+                    <div class="funfact_number-text">
+                        <p>Project Done</p>
+                    </div>
+                </div>
+                <div class="funfact_point point_2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
+                        <circle cx="7.5" cy="7.5" r="7.5" fill="#F3602D"/>
+                    </svg>
+                </div>
+                <div class="funfact_number">
+                    <div class="funfact_number-number">
+                        <p>8+</p>
+                    </div>
+                    <div class="funfact_number-text">
+                        <p>Years Of Experince</p>
+                    </div>
+                </div>
+                <div class="funfact_point point_3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
+                        <circle cx="7.5" cy="7.5" r="7.5" fill="#F3602D"/>
+                    </svg>
+                </div>
+                <div class="funfact_number">
+                    <div class="funfact_number-number">
+                        <p>12</p>
+                    </div>
+                    <div class="funfact_number-text">
+                        <p>National Awards</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- funfact end -->
+        <!-- mail box start -->
+        <div class="mail_box center">
+            <div class="mail_box_left">
+                 <div class="mail_box_left-header">
+                    <h3>Check&nbsp;Your&nbsp;Website&nbsp;Speed</h3>
+                 </div>
+                 <div class="mail_box_left-text">
+                    <p>Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business through revolutionary.</p>
+                 </div>
+                 <div class="mail_box_left_form">
+                    <div class="mail_box_left_form_input">
+                        <div class="mail_box_left_form-address">
+                            <input type="text" class="mail_box_left_form-web_address" value="Web URL">
+                        </div>
+                        <div class="mail_box_left_form-email">
+                            <input type="email" name="" id="" class="mail_box_left_form-email_address" value="Email Address">
+                        </div>
+                    </div>
+                    <a href="#" class="top_content__left_button">submit</a>
+                 </div>
+            </div>
+            <div class="mail_box_right">
+                <img src="./img/mail_box_right.jpg" alt="the man is looking at the report">
+            </div>
+
+        </div>
+        <!-- mail box end -->
     </div>
     <!-- content end -->
 
