Добавил код после семинара 6

--- a/04_DZ/index.html
+++ b/04_DZ/index.html
@@ -291,10 +291,10 @@
                  <div class="mail_box_left_form">
                     <div class="mail_box_left_form_input">
                         <div class="mail_box_left_form-address">
-                            <input type="text" class="mail_box_left_form-web_address" value="Web URL">
+                            <input type="text" class="mail_box_left_form-web_address" placeholder="Web URL">
                         </div>
                         <div class="mail_box_left_form-email">
-                            <input type="email" name="" id="" class="mail_box_left_form-email_address" value="Email Address">
+                            <input type="email" name="" id="" class="mail_box_left_form-email_address" placeholder="Email Address">
                         </div>
                     </div>
                     <a href="#" class="top_content__left_button">submit</a>
