--- a/04_DZ/index.html
+++ b/04_DZ/index.html
@@ -252,7 +252,7 @@
                 </div>
                 <div class="funfact_point point_2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
-                        <circle cx="7.5" cy="7.5" r="7.5" fill="#F3602D"/>
+                        <circle cx="7.5" cy="7.5" r="7.5" fill="#149211"/>
                     </svg>
                 </div>
                 <div class="funfact_number">
@@ -265,7 +265,7 @@
                 </div>
                 <div class="funfact_point point_3">
                     <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
-                        <circle cx="7.5" cy="7.5" r="7.5" fill="#F3602D"/>
+                        <circle cx="7.5" cy="7.5" r="7.5" fill="#ffc700"/>
                     </svg>
                 </div>
                 <div class="funfact_number">
@@ -294,7 +294,7 @@
                             <input type="text" class="mail_box_left_form-web_address" placeholder="Web URL">
                         </div>
                         <div class="mail_box_left_form-email">
-                            <input type="email" name="" id="" class="mail_box_left_form-email_address" placeholder="Email Address">
+                            <input type="email" name="" id="" class="mail_box_left_form-email_address mail_box_left_form-web_address" placeholder="Email Address">
                         </div>
                     </div>
                     <a href="#" class="top_content__left_button">submit</a>
