Верстаю страницу домашнего задания к семинару 6

--- a/06_DZ/index.html
+++ b/06_DZ/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE BRAND OF LUXERIOUS FASHION</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./img/icon/Group-2.png" type="image/png">
+    <link rel="icon" href="./img/icon/Group-2.ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -27,6 +27,34 @@
             </nav>
         </div>
     </header>
+
+    <div class="content">
+            <div class="title">
+                <div class="title_content center">
+                <div class="title_header">
+                    <div class="title_header-square"></div>
+                    <h1 class="title-header">THE BRAND <span class="title-header-down"> OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red">FASHION</span></span></h1>
+                </div>
+            </div>
+        </div>
+        
+        <div class="offer center">
+            <div class="offer_content">
+                <div class="offer_cards_up">
+                    <div class="offer_card offer_card-1">
+                        <div class="offer_card_text">
+                            <p class="offer_card-text">30% OFF</p>
+                        </div>
+                        <div class="offer_card_group">
+                            <p class="offer_card-group">FOR WOMEN</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+
 
 </body>
 </html>
