Верстаю страницу макета ДЗ 6

--- a/06_DZ/index.html
+++ b/06_DZ/index.html
@@ -6,6 +6,9 @@
     <title>THE BRAND OF LUXERIOUS FASHION</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./img/icon/Group-2.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -30,10 +33,13 @@
 
     <div class="content">
             <div class="title">
-                <div class="title_content center">
-                <div class="title_header">
-                    <div class="title_header-square"></div>
-                    <h1 class="title-header">THE BRAND <span class="title-header-down"> OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red">FASHION</span></span></h1>
+                <div class="title_background center">
+                    <div class="title_content">
+                        <div class="title_header">
+                            <div class="title_header-square"></div>
+                            <h1 class="title-header">THE BRAND <span class="title-header-down"> OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red">FASHION</span></span></h1>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
