--- a/06_DZ/index.html
+++ b/06_DZ/index.html
@@ -47,14 +47,24 @@
         <div class="offer center">
             <div class="offer_content">
                 <div class="offer_cards_up">
-                    <div class="offer_card offer_card-1">
-                        <div class="offer_card_text">
-                            <p class="offer_card-text">30% OFF</p>
-                        </div>
-                        <div class="offer_card_group">
-                            <p class="offer_card-group">FOR WOMEN</p>
+
+                    <div class="offer_card">
+                        <img src="./img/offer_card_1.jpg" alt="women">
+                        <div class="offer_card_background">
+                            
+                            <div class="offer_card-1">
+                                
+                                <div class="offer_card_text">
+                                    <p class="offer_card-text">30% OFF</p>
+                                </div>
+                                <div class="offer_card_group">
+                                    <p class="offer_card-group">FOR WOMEN</p>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
