--- a/06_DZ/index.html
+++ b/06_DZ/index.html
@@ -49,22 +49,60 @@
                 <div class="offer_cards_up">
 
                     <div class="offer_card">
-                        <img src="./img/offer_card_1.jpg" alt="women">
                         <div class="offer_card_background">
-                            
+                            <img src="./img/offer_card_1.jpeg" alt="women" class="offer_card-img">
                             <div class="offer_card-1">
-                                
                                 <div class="offer_card_text">
                                     <p class="offer_card-text">30% OFF</p>
                                 </div>
                                 <div class="offer_card_group">
                                     <p class="offer_card-group">FOR WOMEN</p>
                                 </div>
-
+                            </div>
+                        </div>
+                    </div>
+                    <div class="offer_card">
+                        <div class="offer_card_background">
+                            <img src="./img/offer_card_2.jpeg" alt="man" class="offer_card-img">
+                            <div class="offer_card-1">
+                                <div class="offer_card_text">
+                                    <p class="offer_card-text">hot deal</p>
+                                </div>
+                                <div class="offer_card_group">
+                                    <p class="offer_card-group">FOR men</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="offer_card">
+                        <div class="offer_card_background">
+                            <img src="./img/offer_card_3.jpeg" alt="kids" class="offer_card-img">
+                            <div class="offer_card-1">
+                                <div class="offer_card_text">
+                                    <p class="offer_card-text">NEW ARRIVALS</p>
+                                </div>
+                                <div class="offer_card_group">
+                                    <p class="offer_card-group">FOR KIDS</p>
+                                </div>
                             </div>
                         </div>
                     </div>
 
+                </div>
+                <div class="offer_cards_down">
+                    <div class="offer_card">
+                        <div class="offer_card_background">
+                            <img src="./img/offer_card_down.jpeg" alt="accesories" class="offer_card-img">
+                            <div class="offer_card-1">
+                                <div class="offer_card_text">
+                                    <p class="offer_card-text">luxirous & trendy</p>
+                                </div>
+                                <div class="offer_card_group">
+                                    <p class="offer_card-group">accesories</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
