--- a/08_seminar/index.html
+++ b/08_seminar/index.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
 </head>
 <body>
-    <form action="">
+    <form class="form" action="">
         <label for="name_input">Имя: </label>
-            <input type="text" name="text" id="name_input" required autofocus><br>
+        <input type="text" name="text" id="name_input" required autofocus>
         <label for="email_input">Имейл: </label>
-            <input type="email" name="email" id="email_input" required><br>
+        <input type="email" name="email" id="email_input" required>
         <label for="pass_input">Пароль: </label>
-            <input type="password" name="password" id="pass_input" required><br>
+        <input type="password" name="password" id="pass_input" required>
         <label for="date_input">Дата рождения: </label>
-            <input type="date" name="date" id="date_input" required><br>
+        <input type="date" name="date" id="date_input" required>
         <label for="tel_input">Номер телефона: </label>
-            <input type="tel" name="tel" id="tel_input" required><br>
+        <input type="tel" name="tel" id="tel_input" required>
         <label for="range">Ползунок: </label>
-            <input type="range" id="volume" name="volume" min="0" max="11" / required> <br>
-         <label for="checkbox">Согласится с условиями</label>
-            <input type="checkbox" name="checkbox" id="checkbox_input" required class="fa-thin fa-square-check"><br>
-        <button type="submit">Отправить</button>
+        <input type="range" id="volume" name="volume" min="0" max="11" / required> 
+        <label for="checkbox">Согласится с условиями</label>
+        <input type="checkbox" name="checkbox" id="checkbox_input" required class="fa-thin fa-square-check">
+        <button type="submit" class="button_input">Отправить</button>
     </form>
-
+    
 
 </body>
 </html>
