--- a/08_seminar/index.html
+++ b/08_seminar/index.html
@@ -23,15 +23,15 @@
         <label for="range">Ползунок: </label>
         <input type="range" id="volume" name="volume" min="0" max="11" / required>
         <div class="checkbox_div">
-            <input type="checkbox" name="checkbox" id="checkbox_input" required class="checkbox_div_castom fa-solid fa-bars">
+            <input type="checkbox" name="checkbox" id="checkbox_input" required class="custom-checkbox fa-solid fa-bars">
             <!-- <input type="checkbox" name="checkbox" id="checkbox_input" required class="fa-solid fa-bars"> -->
             <label for="checkbox" class="checkbox_div_lable">Согласится с условиями</label>
         </div> 
         <button type="submit" class="button_input">Отправить</button>
     </form>
 
-    <input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes">
-    <label for="happy">Happy</label>
+    <!-- <input type="checkbox" class="custom-checkbox" id="happy" name="happy" value="yes">
+    <label for="happy">Happy</label> -->
 
 
 
