верстаю макет магазина

--- a/06_DZ/index.html
+++ b/06_DZ/index.html
@@ -33,14 +33,21 @@
 
     <div class="content">
             <div class="title">
-                <div class="title_background center">
+                <!-- <div class="title_background center">
                     <div class="title_content">
                         <div class="title_header">
                             <div class="title_header-square"></div>
                             <h1 class="title-header">THE BRAND <span class="title-header-down"> OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red">FASHION</span></span></h1>
                         </div>
                     </div>
+                </div> -->
+                
+                <div class="title_content center">
+                    <div class="title_header">
+                        <h1 class="title-header center">THE BRAND <span class="title-header-down"> OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red">FASHION</span></span></h1>
+                    </div>
                 </div>
+
             </div>
         </div>
         
