верстаю макет ДЗ

--- a/06_DZ/index.html
+++ b/06_DZ/index.html
@@ -42,9 +42,14 @@
                     </div>
                 </div> -->
                 
-                <div class="title_content center">
-                    <div class="title_header">
-                        <h1 class="title-header center">THE BRAND <span class="title-header-down"> OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red">FASHION</span></span></h1>
+                <div class="title_content center_title">
+                    <div class="title_content_left">
+                        <img src="./img/title.png" alt="man" class="title_content_img">
+                    </div>
+                    <div class="title_headers">
+                        <div class="title_header">
+                            <h1 class="title-header center">THE BRAND <span class="title-header-down"> OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red">FASHION</span></span></h1>
+                        </div>
                     </div>
                 </div>
 
