--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li class="nav_elem"><a href="./08_seminar/index.html" target="_blank">Семинар 8</a> (форма)</li>
         <li class="nav_elem"><a href="./09_seminar/index.html" target="_blank">Семинар 9</a> (анимация)</li>
         <li class="nav_elem"><a href="./10_seminar/index.html" target="_blank">Семинар 10</a> (Bootstrap)</li>
-        <!-- <li class="nav_elem"><a href=""></a></li> -->
+        <li class="nav_elem"><a href="./10_DZ/index.html" target="_blank">ДЗ 10</a> (Bootstrap)</li>
     </ul>
 </body>
 </html>
