--- a/10_DZ/index.html
+++ b/10_DZ/index.html
@@ -7,9 +7,10 @@
     <link rel="icon" href="./img/icon/Group-2.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar bg-dark center">
+    <!-- <nav class="navbar bg-dark center">
         <div class="container-fluid ">
           <a class="navbar-brand"><img src="./img/icon/Group 2.png" alt="logo"></a>
           <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,13 +44,43 @@
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
-          <!-- <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button> -->
           </form>
         </div>
+    </nav> -->
+
+    <nav class="navbar navbar-expand-lg bg-dark center"> <!-- bg-body-tertiary -->
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="./img/icon/Group 2.png" alt="logo" class="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="26" height="26" viewBox="0 0 50 50">
+                  <path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <div class="nav-link_burger-elem">
+                  <div class="nav-link_burger-elem-line"></div>
+                  <div class="nav-link_burger-elem-line"></div>
+                  <div class="nav-link_burger-elem-line"></div>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-<p style="color: #212529;"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto atque quasi autem ipsum laboriosam? Debitis nisi</b></p>
+
+    <p style="color: #212529;"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto atque quasi autem ipsum laboriosam? Debitis nisi</b></p>
 <p style="color: #222;"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto atque quasi autem ipsum laboriosam? Debitis nisi</b></p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
