--- a/10_DZ/index.html
+++ b/10_DZ/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>THE BRAND OF LUXERIOUS FASHION</title>
-    <link rel="icon" href="./img/icon/Group-2.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
-</head>
-<body>
+    <link rel="icon" href="./img/icon/Group-2.ico" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
+      integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <!-- <nav class="navbar bg-dark center">
         <div class="container-fluid ">
           <a class="navbar-brand"><img src="./img/icon/Group 2.png" alt="logo"></a>
@@ -48,41 +58,126 @@
         </div>
     </nav> -->
 
-    <nav class="navbar navbar-expand-lg bg-dark center"> <!-- bg-body-tertiary -->
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="./img/icon/Group 2.png" alt="logo" class="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="26" height="26" viewBox="0 0 50 50">
-                  <path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path>
-                </svg>
-              </a>
-            </li>
-          </ul>
-          
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <div class="nav-link_burger-elem">
-                  <div class="nav-link_burger-elem-line"></div>
-                  <div class="nav-link_burger-elem-line"></div>
-                  <div class="nav-link_burger-elem-line"></div>
-                </div>
-              </a>
-            </li>
-          </ul>
+    <nav class="navbar navbar-expand-lg bg-dark center">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+          ><img src="./img/icon/Group 2.png" alt="logo" class="logo mb-3 mt-3"
+          /></a>
+          <button
+            class="navbar-toggler nav-link_burger-elem"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Переключатель навигации"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <svg
+                    width="26.001587"
+                    height="26.791992"
+                    viewBox="0 0 26.0016 26.792"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                  >
+                    <desc>Created with Pixso.</desc>
+                    <defs />
+                    <path
+                      d="M18.0615 17.4149C19.6732 15.6549 20.6301 13.3938 20.7717 11.0115C20.9132 8.62927 20.2308 6.27075 18.8389 4.33228C17.447 2.39368 15.4304 0.993042 13.1279 0.365723C10.8253 -0.261719 8.37708 -0.0777588 6.19409 0.886719C4.01123 1.85107 2.22656 3.53735 1.14001 5.66211C0.0533447 7.78687 -0.269043 10.2208 0.226929 12.5552C0.7229 14.8896 2.00696 16.9823 3.86353 18.4818C5.72009 19.9813 8.03613 20.7963 10.4226 20.7899C12.6749 20.7931 14.8665 20.0591 16.6626 18.7L24.4105 26.507C24.4961 26.5961 24.5985 26.6671 24.7118 26.7161C24.8252 26.765 24.9471 26.7908 25.0706 26.792C25.1942 26.7924 25.3167 26.7672 25.4303 26.7183C25.5438 26.6692 25.646 26.5973 25.7306 26.507C25.9045 26.326 26.0016 26.0848 26.0016 25.834C26.0016 25.583 25.9045 25.3418 25.7306 25.161L18.0615 17.4149ZM1.88855 10.2899C1.90137 8.60474 2.41284 6.96094 3.35852 5.56592C4.3042 4.1709 5.64172 3.08704 7.20239 2.45105C8.76306 1.81506 10.4772 1.65527 12.1285 1.99207C13.7799 2.32874 15.2946 3.14685 16.4817 4.34314C17.6688 5.53943 18.4752 7.0603 18.7992 8.71423C19.1232 10.3682 18.9502 12.0809 18.3022 13.6367C17.6542 15.1925 16.5601 16.5216 15.1578 17.4564C13.7555 18.3914 12.1079 18.8901 10.4226 18.89C8.15112 18.8792 5.97681 17.9674 4.37683 16.3551C2.77686 14.7428 1.88196 12.5614 1.88855 10.2899Z"
+                      fill="#E8E8E8"
+                      fill-opacity="1.000000"
+                      fill-rule="nonzero"
+                    />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <div class="navbar-toggler-icon"></div>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <svg
+                    width="29"
+                    height="29"
+                    viewBox="0 0 29 29"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                  >
+                    <path
+                      d="M14.5 19.937C19 19.937 22.656 15.464 22.656 9.96802C22.656 4.47205 19 0 14.5 0C13.3631 0.0217285 12.2463 0.303345 11.2351 0.823364C10.2239 1.34338 9.34506 2.08789 8.66602 3C7.12662 4.99573 6.3082 7.45386 6.34399 9.974C6.34399 15.465 10 19.937 14.5 19.937ZM14.5 1.81299C18 1.81299 20.844 5.47205 20.844 9.96899C20.844 14.4659 17.998 18.125 14.5 18.125C11.002 18.125 8.15604 14.465 8.15503 9.96899C8.15402 5.47302 11 1.81299 14.5 1.81299ZM20.844 18.125C20.6036 18.125 20.373 18.2205 20.203 18.3905C20.033 18.5605 19.9375 18.7911 19.9375 19.0315C19.9375 19.272 20.033 19.5024 20.203 19.6725C20.373 19.8425 20.6036 19.938 20.844 19.938C22.526 19.9398 24.1385 20.6089 25.3279 21.7982C26.5172 22.9875 27.1861 24.6001 27.188 26.282C27.1875 26.5221 27.0918 26.7523 26.922 26.922C26.7522 27.0918 26.5221 27.1875 26.282 27.188L2.71997 27.188C2.47986 27.1875 2.24976 27.0918 2.07996 26.922C1.91016 26.7523 1.81448 26.5221 1.81396 26.282C1.81607 24.6001 2.48517 22.9877 3.67444 21.7985C4.86371 20.6091 6.47607 19.9401 8.15796 19.938C8.39825 19.938 8.62866 19.8425 8.79858 19.6726C8.96851 19.5027 9.06396 19.2723 9.06396 19.032C9.06396 18.7917 8.96851 18.5613 8.79858 18.3914C8.62866 18.2214 8.39825 18.126 8.15796 18.126C5.99542 18.1278 3.922 18.9875 2.39258 20.5164C0.863159 22.0453 0.00265503 24.1184 0 26.281C0.000793457 27.0018 0.287506 27.693 0.797241 28.2028C1.30698 28.7125 1.99811 28.9993 2.71899 29L26.282 29C27.0027 28.9989 27.6936 28.7122 28.2031 28.2024C28.7126 27.6926 28.9992 27.0017 29 26.281C28.9973 24.1187 28.1372 22.0458 26.6083 20.5167C25.0793 18.9878 23.0063 18.1277 20.844 18.125Z"
+                      fill="#E8E8E8"
+                      fill-opacity="1.000000"
+                      fill-rule="nonzero"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  <svg
+                    width="31.995575"
+                    height="29.000000"
+                    viewBox="0 0 31.9956 29"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                  >
+                    <desc>Created with Pixso.</desc>
+                    <defs />
+                    <path
+                      id="Forma 1"
+                      d="M26.2009 29C25.5532 28.9739 24.9415 28.6947 24.4972 28.2227C24.0529 27.7506 23.8114 27.1232 23.8245 26.475C23.8376 25.8269 24.1042 25.2097 24.5673 24.756C25.0303 24.3021 25.6527 24.048 26.301 24.048C26.9493 24.048 27.5717 24.3021 28.0347 24.756C28.4977 25.2097 28.7644 25.8269 28.7775 26.475C28.7906 27.1232 28.549 27.7506 28.1047 28.2227C27.6604 28.6947 27.0488 28.9739 26.401 29L26.2009 29ZM6.75293 26.3199C6.75293 25.7899 6.9101 25.2719 7.20459 24.8311C7.49908 24.3904 7.91763 24.0469 8.40735 23.844C8.89706 23.6411 9.43594 23.5881 9.95581 23.6915C10.4757 23.7949 10.9532 24.0502 11.328 24.4249C11.7028 24.7998 11.9581 25.2773 12.0615 25.7971C12.1649 26.317 12.1118 26.8558 11.9089 27.3456C11.7061 27.8353 11.3626 28.2539 10.9219 28.5483C10.4811 28.8428 9.96304 29 9.43298 29C9.08087 29.0002 8.73212 28.9312 8.40674 28.7966C8.08136 28.662 7.78571 28.4646 7.53662 28.2158C7.28754 27.9669 7.09 27.6714 6.9552 27.3461C6.8204 27.0208 6.75098 26.6721 6.75098 26.3199L6.75293 26.3199ZM10.553 20.686C10.2935 20.6868 10.041 20.6023 9.83411 20.4457C9.62726 20.2891 9.47757 20.069 9.40796 19.819L4.57495 2.36401L1.18201 2.36401C0.86853 2.36401 0.567871 2.2395 0.346191 2.01782C0.124512 1.79614 0 1.49548 0 1.18201C0 0.86853 0.124512 0.567871 0.346191 0.346191C0.567871 0.124512 0.86853 0 1.18201 0L5.46301 0C5.7225 -0.000854492 5.97504 0.0837402 6.18176 0.240601C6.38849 0.397461 6.53784 0.61792 6.60693 0.868042L11.4399 18.323L24.6179 18.323L29.001 8.27502L14.401 8.27502C14.2428 8.27966 14.0854 8.25244 13.9379 8.19507C13.7904 8.1377 13.6559 8.05139 13.5424 7.94104C13.4288 7.83081 13.3386 7.69885 13.277 7.5531C13.2154 7.40735 13.1836 7.25073 13.1836 7.09253C13.1836 6.9342 13.2154 6.77759 13.277 6.63184C13.3386 6.48608 13.4288 6.35413 13.5424 6.2439C13.6559 6.13367 13.7904 6.04724 13.9379 5.98999C14.0854 5.93262 14.2428 5.9054 14.401 5.91003L30.814 5.91003C31.0096 5.90991 31.2022 5.95862 31.3744 6.05176C31.5465 6.14478 31.6928 6.2793 31.7999 6.44299C31.9078 6.6073 31.9734 6.79565 31.9908 6.99146C32.0083 7.18726 31.9771 7.38428 31.9 7.56506L26.495 19.9771C26.4026 20.1876 26.2509 20.3668 26.0585 20.4927C25.866 20.6187 25.641 20.6858 25.411 20.686L10.553 20.686Z"
+                      fill="#E8E8E8"
+                      fill-opacity="1.000000"
+                      fill-rule="nonzero"
+                    />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
+      
     </nav>
 
-    <p style="color: #212529;"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto atque quasi autem ipsum laboriosam? Debitis nisi</b></p>
-<p style="color: #222;"><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto atque quasi autem ipsum laboriosam? Debitis nisi</b></p>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+  <div class="center_title">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <img src="./img/title.png" alt="man" class="title_content_img" />
+          </div>
+          <div class="col">
+            <h1 class="title-header center">
+              THE BRAND
+              <span class="title-header-down">
+                OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red"
+                  >FASHION</span
+                ></span
+              >
+            </h1>
+          </div>
+        </div>
+      </div>
+  </div>
+
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
