--- a/index.html
+++ b/index.html
@@ -1,24 +1,64 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Курс HTML & CSS</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1 class="title">Навигация по разделам репозитория</h1>
-    <ul class="navigate">
-        <li class="nav_elem"><a href="./01_seminar/index.html" target="_blank">Семинар 1</a> (стили в HTML + пасхалки на карте)</li>
-        <li class="nav_elem"><a href="./01_DZ/index.html" target="_blank">ДЗ 1</a> (знакомство с HTML)</li>
-        <li class="nav_elem"><a href="./02_DZ/index.html" target="_blank">ДЗ 2</a> (знакомство с CSS)</li>
-        <li class="nav_elem"><a href="./03_seminar/index.html" target="_blank">Семинар 3</a> (макет библиотека)</li>
-        <li class="nav_elem"><a href="./04_DZ/index.html" target="_blank">ДЗ 4</a> (макет + адаптив)</li>
-        <li class="nav_elem"><a href="./06_DZ/index.html" target="_blank">ДЗ 6</a> (макет магазин)</li>
-        <li class="nav_elem"><a href="./07_seminar/index.html" target="_blank">Семинар 7</a> (макет ракета)</li>
-        <li class="nav_elem"><a href="./08_seminar/index.html" target="_blank">Семинар 8</a> (форма)</li>
-        <li class="nav_elem"><a href="./09_seminar/index.html" target="_blank">Семинар 9</a> (анимация)</li>
-        <li class="nav_elem"><a href="./10_seminar/index.html" target="_blank">Семинар 10</a> (Bootstrap)</li>
-        <li class="nav_elem"><a href="./10_DZ/index.html" target="_blank">ДЗ 10</a> (Bootstrap)</li>
-    </ul>
-</body>
+    <div class="navigates" style="display: flex">
+      <ul class="navigate">
+        <h3>Курс HTML & CSS</h3>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/01_seminar/index.html" target="_blank">Семинар 1</a> (стили
+          в HTML + пасхалки на карте)
+        </li>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/01_DZ/index.html" target="_blank">ДЗ 1</a> (знакомство с
+          HTML)
+        </li>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/02_DZ/index.html" target="_blank">ДЗ 2</a> (знакомство с
+          CSS)
+        </li>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/03_seminar/index.html" target="_blank">Семинар 3</a> (макет
+          библиотека)
+        </li>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/04_DZ/index.html" target="_blank">ДЗ 4</a> (макет +
+          адаптив)
+        </li>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/06_DZ/index.html" target="_blank">ДЗ 6</a> (макет магазин)
+        </li>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/07_seminar/index.html" target="_blank">Семинар 7</a> (макет
+          ракета)
+        </li>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/08_seminar/index.html" target="_blank">Семинар 8</a>
+          (форма)
+        </li>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/09_seminar/index.html" target="_blank">Семинар 9</a>
+          (анимация)
+        </li>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/10_seminar/index.html" target="_blank">Семинар 10</a>
+          (Bootstrap)
+        </li>
+        <li class="nav_elem">
+          <a href="./01_HTML_CSS/10_DZ/index.html" target="_blank">ДЗ 10</a> (Bootstrap)
+        </li>
+      </ul>
+      <ul class="navigate_plus">
+        <h3>Продвинутый курс HTML & CSS</h3>
+        <li class="nav_elem">
+          <a href="./02_HTML_CSS/01_seminar/index.html" target="_blank">Семинар 1</a> (Препроцессы)
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
