Добавил ссылку на ДЗ 01

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <li class="nav_elem">
           <a href="./02_HTML_CSS/01_seminar/index.html" target="_blank">Семинар 1</a> (Препроцессы)
         </li>
+        <li class="nav_elem">
+          <a href="./02_HTML_CSS/01_DZ/index.html" target="_blank">ДЗ 1</a> (Препроцессы)
+        </li>
       </ul>
     </div>
   </body>
