Доверстал страницу магазина через sass

--- a/02_HTML_CSS/01_DZ/index.html
+++ b/02_HTML_CSS/01_DZ/index.html
@@ -117,10 +117,69 @@
                 <p class="products_header-text">Shop for items based on what we featured in this week</p>
             </div>
             <div class="products_elements">
-                <div class="products_card"></div>
-            </div>
+                <div class="products_card">
+                    <img src="./img/products_card_1.jpeg" alt="card_1" class="products_card_img">
+                    <div class="products_card_down">
+                        <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
+                        <p class="products_card_down_text">
+                            Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.
+                        </p>
+                        <p class="products_card_down_price">$52.00</p>
+                    </div>
+                </div>
+                <div class="products_card">
+                    <img src="./img/products_card_2.jpeg" alt="card_2" class="products_card_img">
+                    <div class="products_card_down">
+                        <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
+                        <p class="products_card_down_text">
+                            Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.
+                        </p>
+                        <p class="products_card_down_price">$52.00</p>
+                    </div>
+                </div>
+                <div class="products_card">
+                    <img src="./img/products_card_3.jpeg" alt="card_3" class="products_card_img">
+                    <div class="products_card_down">
+                        <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
+                        <p class="products_card_down_text">
+                            Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.
+                        </p>
+                        <p class="products_card_down_price">$52.00</p>
+                    </div>
+                </div>
+                <div class="products_card">
+                    <img src="./img/products_card_4.jpeg" alt="card_4" class="products_card_img">
+                    <div class="products_card_down">
+                        <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
+                        <p class="products_card_down_text">
+                            Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.
+                        </p>
+                        <p class="products_card_down_price">$52.00</p>
+                    </div>
+                </div>
+                <div class="products_card">
+                    <img src="./img/products_card_5.jpeg" alt="card_5" class="products_card_img">
+                    <div class="products_card_down">
+                        <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
+                        <p class="products_card_down_text">
+                            Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.
+                        </p>
+                        <p class="products_card_down_price">$52.00</p>
+                    </div>
+                </div>
+                <div class="products_card">
+                    <img src="./img/products_card_6.jpeg" alt="card_6" class="products_card_img">
+                    <div class="products_card_down">
+                        <p class="products_card_down_header">ELLERY X M'O CAPSULE</p>
+                        <p class="products_card_down_text">
+                            Known for her sculptural takes on&nbsp;traditional tailoring, Australian arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.
+                        </p>
+                        <p class="products_card_down_price">$52.00</p>
+                    </div>
+                </div>
+            </div> 
             <div class="products_button">
-
+                <a href="#" class="products_button_link">Browse All Product</a>
             </div>
         </div>
     </div>
